--- a/pom.xml
+++ b/pom.xml
@@ -49,12 +49,7 @@
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap</artifactId>
-            <version>5.1.3</version>
-        </dependency>
-        <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>jquery</artifactId>
-            <version>3.6.0</version>
+            <version>3.3.7-1</version>
         </dependency>
         <dependency>
             <groupId>javax.xml.bind</groupId>
