--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,9 +3,18 @@ spring:
     url: jdbc:mysql://localhost:3306/yuan_dev
     username: yuan_dev_user
     password: 1
+    initialization-mode: always
   jpa:
     hibernate:
       ddl-auto: validate
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     database: mysql
     show-sql: true
+#    properties:
+#      javax:
+#        persistence:
+#          schema-generation:
+#            create-source: metadata
+#            scripts:
+#                action: create
+#                create-target: yuan_database_create.sql
