--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -3,6 +3,7 @@ spring:
     url: jdbc:mysql://localhost:3306/yuan_prod
     username: yuan_prod_user
     password: 1
+    initialization-mode: always
   jpa:
     hibernate:
       ddl-auto: validate
