--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,13 +3,16 @@ spring:
     url: jdbc:mysql://localhost:3306/yuan_dev
     username: yuan_dev_user
     password: 1
-    initialization-mode: always
+    # initialization-mode: always
   jpa:
     hibernate:
       ddl-auto: validate
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     database: mysql
     show-sql: true
+  sql:
+    init:
+      platform: mysql
 #    properties:
 #      javax:
 #        persistence:
